[package]
name = "wasm-multisig"
version = "0.1.0"
authors = ["nzengi < zenginureddin1@gmail.com>"]
edition = "2021"
description = "A WASM-based multisig library for Web3 developers, providing a high-performance, secure, and customizable solution."
license = "MIT"
repository = "https://github.com/nzengi/wasm-multisig"
homepage = "https://github.com/nzengi/wasm-multisig"
readme = "README.md"
keywords = ["WASM", "multisig", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
secp256k1 = "0.21"
web3 = "0.14"
rand = "0.8"
sha2 = "0.9"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[profile.release]
lto = true
